# terminal-coder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CONTRIB.md  RUNBOOK.md
src/tc/: __init__.py
src/tc/bootstrap/: checks.py  parser.py  verifier.py
src/tc/cli/: app.py
src/tc/cli/commands/: dashboard_cmd.py  history_cmd.py  init_cmd.py  kill_cmd.py  mcp_cmd.py  pause_cmd.py  plan_cmd.py  reset_cmd.py  retry_cmd.py  (+3 more)
src/tc/config/: constants.py  settings.py
src/tc/core/: enums.py  events.py  init_service.py  models.py  retry_policy.py  scheduler.py  state_machine.py
src/tc/db/: connection.py  queries.py  repository.py  schema.py
src/tc/mcp/: config.py  server.py  tools.py
src/tc/orchestrator/: deploy_verifier.py  engine.py  prd_launcher.py  review_coordinator.py  session_manager.py
src/tc/planning/: claude_md_generator.py  plan_parser.py  planner.py
src/tc/templates/: deploy_brief.md.j2  planning_brief.md.j2  renderer.py  review_brief.md.j2  security_brief.md.j2  task_brief.md.j2
src/tc/tmux/: manager.py  monitor.py
src/tc/tui/: app.py
tests/: conftest.py
tests/fixtures/: sample_bootstrap.md  sample_plan.json  sample_prd.md
tests/integration/: test_db_repository.py  test_full_flow.py  test_init_cmd.py  test_verify_cmd.py
tests/unit/: test_bootstrap_parser.py  test_brief_renderer.py  test_events.py  test_init_service.py  test_mcp_tools.py  test_models.py  test_plan_parser.py  test_prd_launcher.py  test_retry_policy.py  test_scheduler.py  test_state_machine.py  test_tui_widgets.py  test_wizard_screens.py  test_wizard_state.py
(+19 files in other folders)
