[project]
name = "terminal-coder"
version = "0.1.0"
description = "Autonomous software building orchestrator using Claude Code"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.80",
    "libtmux>=0.37",
    "mcp>=1.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
tc = "tc.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
